<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>nl.siegmann.epublib</groupId>
	<artifactId>epublib-parent</artifactId>
	<name>epublib-parent</name>
	<packaging>pom</packaging>
	<version>4.0</version>
	<description>A java library for reading/writing/manipulating epub files</description>
	<url>http://www.siegmann.nl/epublib</url>
	<inceptionYear>2009</inceptionYear>

	<properties>
        <epublib.version>4.0</epublib.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<slf4j.version>1.6.1</slf4j.version>
		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
		<maven-site-plugin.version>3.8.2</maven-site-plugin.version>
		<maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
		<maven-source-plugin.version>3.2.0</maven-source-plugin.version>
		<maven-javadoc-plugin.version>3.4.0</maven-javadoc-plugin.version>
		<maven.compiler.release>25</maven.compiler.release>
		<source.version>25</source.version>
		<target.version>25</target.version>
		<mockito.version>5.14.2</mockito.version>
		<bytebuddy.version>1.15.11</bytebuddy.version>
	</properties>

	<modules>
		<module>../epublib-core</module>
		<module>../epublib-tools</module>
	</modules>

	<licenses>
		<license>
			<name>LGPL</name>
			<url>http://www.gnu.org/licenses/lgpl.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>paul</id>
			<name>Paul Siegmann</name>
			<email>paul.siegmann+epublib@gmail.com</email>
			<url>http://www.siegmann.nl/</url>
			<timezone>+1</timezone>
		</developer>
	</developers>

	<issueManagement>
		<system>github</system>
		<url>http://github.com/psiegman/epublib/issues</url>
	</issueManagement>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>net.sf.kxml</groupId>
				<artifactId>kxml2</artifactId>
				<version>2.3.0</version>
			</dependency>
			<dependency>
				<groupId>xmlpull</groupId>
				<artifactId>xmlpull</artifactId>
				<version>1.1.3.4d_b4_min</version>
			</dependency>
			<dependency>
				<groupId>net.sourceforge.htmlcleaner</groupId>
				<artifactId>htmlcleaner</artifactId>
				<version>2.2</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.0.1</version>
			</dependency>
			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>2.4</version>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-simple</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-vfs</groupId>
				<artifactId>commons-vfs</artifactId>
				<version>1.0</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.13.2</version>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${mockito.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>net.bytebuddy</groupId>
				<artifactId>byte-buddy</artifactId>
				<version>${bytebuddy.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>net.bytebuddy</groupId>
				<artifactId>byte-buddy-agent</artifactId>
				<version>${bytebuddy.version}</version>
				<scope>test</scope>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<distributionManagement>
		<repository>
			<id>github.repo</id>
			<url>file:///D:/private/project/git-maven-repo/mvn-repo/releases</url>
		</repository>
	</distributionManagement>

	<scm>
		<url>http://github.com/psiegman/epublib</url>
		<connection>scm:git:https://psiegman@github.com/psiegman/epublib.git</connection>
		<developerConnection>scm:git:https://psiegman@github.com/psiegman/epublib.git</developerConnection>
	</scm>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<release>${maven.compiler.release}</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.1.2</version>
				<configuration>
					<argLine>-Dnet.bytebuddy.experimental=true --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven-source-plugin.version}</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${maven-javadoc-plugin.version}</version>
				<configuration>
					<!-- fix for https://bugs.openjdk.java.net/browse/JDK-8212233 -->
					<source>25</source>
					<doclint>none</doclint>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>${maven-site-plugin.version}</version>
			</plugin>
		</plugins>
	</reporting>
	<repositories>
		<repository>
			<id>maven</id>
			<url>https://repo1.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>jboss</id>
			<url>https://repository.jboss.org/nexus/</url>
		</repository>
		<repository>
			<id>net.java.repository</id>
			<name>Java.net repository</name>
			<url>https://download.java.net/maven/2/</url>
		</repository>
	</repositories>

</project>
